# synthetic-generator

./: .gitignore  Cardiovascular_Synthetic_Data_API.postman_collection.json  Dockerfile.api  Dockerfile.consumer  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
app/db/: init_db.py  models.py  session.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  anomaly_injector.py  audit_log_producer.py  audit_log_service.py  gaussian_copula_generator.py  generator_factory.py  kafka_producer.py  postgres_task_service.py  smote_generator.py  synthetic_generator.py  task_service.py  tvae_generator.py
app/utils/: __init__.py  logger.py  task_tracker.py
config/: settings.py
consumer/: __init__.py  audit_log_consumer.py  kafka_consumer.py  snowflake_writer.py
scripts/: download_dataset.py  monitor_training.py  setup.sh  test_all_generators.py  test_api.py  test_factory.py  test_snowflake.py
